--- a/src/styles/layout/_container.sass
+++ b/src/styles/layout/_container.sass
@@ -10,6 +10,11 @@
   & > *
     width: 100%
 
+.container_rightSide
+  position: absolute
+  top: 0
+  right: 15px
+
 @media screen and (max-width: 1200px)
   .wrapper
     width: 100%
