--- a/src/styles/base/_base.sass
+++ b/src/styles/base/_base.sass
@@ -33,10 +33,21 @@ input[type="text"], button
   box-sizing: border-box
   margin: 15px 0
 
+@media screen and (max-width: 650px)
+  input[type="text"], button
+    width: 220px
+
+input[type="checkbox"]
+  width: 30px
+  height: 30px
+  padding: 5px
+  box-sizing: border-box
+  margin: 15px 0
+
 button
   background: #61D7A4
   color: $secondary-font-color
-  margin: 0
+  margin: 15px 0
 
   &:hover
     background: $list-background
