--- a/src/styles/components/_addExpense.sass
+++ b/src/styles/components/_addExpense.sass
@@ -4,3 +4,16 @@
 .addExpense__info
   text-align: left
   margin-bottom: 25px
+
+.addExpense__fields-wrapper
+  display: flex
+  justify-content: space-around
+  flex-wrap: wrap
+
+.addExpense__field
+  display: inline-flex
+  flex-direction: column
+  align-items: center
+
+.addExpense__btn
+  margin-top: 30px
